--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
         <!-- banner -->
         <section class="mx-auto w-11/12 md:w-4/5 ">
             <!-- banner img -->
-            <img class="mx-auto mt-10 mb-5" src="assets/banner.png" alt="">
+            <img class="w-4/5 md:w-5/12 mx-auto mt-5 mb-5" src="assets/banner.png" alt="">
             <!-- banner text -->
-            <div class="text-center">
+            <div class="text-center md:w-4/5 mx-auto">
                 <h1 class="text-3xl md:text-6xl font-extrabold">A barn house of this design has a striking appearance</h1>
                 <p class="text-center my-6">The barn house captivates with its blend of rustic charm and modern sophistication, featuring
                     weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
