Completed design thoughtful section

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <style>
-        .global-font{
+        .global-font {
             font-family: "Manrope", sans-serif;
         }
 
-        .primary-color{
+        .primary-color {
             background-color: #ABEF5F;
         }
 
-        .accent-color{
+        .accent-color {
             background-color: rgba(171, 239, 95, 0.5);
         }
     </style>
@@ -102,8 +102,10 @@
             <img class="w-4/5 md:w-5/12 mx-auto mt-5 mb-5" src="assets/banner.png" alt="">
             <!-- banner text -->
             <div class="text-center md:w-4/5 mx-auto">
-                <h1 class="text-3xl md:text-6xl font-extrabold">A barn house of this design has a striking appearance</h1>
-                <p class="text-center my-6">The barn house captivates with its blend of rustic charm and modern sophistication, featuring
+                <h1 class="text-3xl md:text-6xl font-extrabold">A barn house of this design has a striking appearance
+                </h1>
+                <p class="text-center my-6">The barn house captivates with its blend of rustic charm and modern
+                    sophistication, featuring
                     weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
             </div>
             <!-- banner button -->
@@ -116,6 +118,66 @@
                     </svg></button>
             </div>
         </section>
+
+        <!-- Design Thoughtful Section -->
+        <section class="bg-gray-300 mt-20">
+            <div class="md:flex items-end mx-auto w-12/12 md:w-4/5 py-22">
+                <!-- arrow img -->
+                 <div class="hidden md:block absolute -bottom-30 left-25"><img src="assets/Vector.png" alt=""></div>
+                <!-- left column -->
+                <div class="flex-1">
+                    <!-- about us -->
+                    <div class="mb-5 text-center md:text-left">
+                        <a class="btn rounded-3xl font-bold bg-white border-none"><svg xmlns="http://www.w3.org/2000/svg"
+                                fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                            </svg>
+                            About Us</a>
+                    </div>
+                    <!-- section text -->
+                    <div class="w-4/5 md:w-auto mx-auto">
+                        <h3 class="text-center md:text-left text-3xl md:text-4xl font-extrabold">We design thoughtful <br>liveable spaces</h3>
+                        <p class="text-center md:text-left mt-5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    </div>
+                    <!-- cards container -->
+                     <div>
+                        <!-- first card -->
+                        <div class="flex justify-start items-center mt-5 bg-white rounded-lg w-11/12 py-8 px-5 mx-auto md:mx-0">
+                            <!-- card img -->
+                            <div class="">
+                                <img src="assets/commercial.png" alt="">
+                            </div>
+                            <!-- card content -->
+                             <div class="ml-6 w-3/5">
+                                <h4 class="text-xl font-bold mb-2">Commercial</h4>
+                                <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                             </div>
+                        </div>
+                        <!-- second card -->
+                        <div class="flex justify-start items-center mt-5 bg-white rounded-lg w-11/12 py-8 px-5 mx-auto md:mx-0 mb-5 md:mb-0">
+                            <!-- card img -->
+                            <div class="">
+                                <img src="assets/residential.png" alt="">
+                            </div>
+                            <!-- card content -->
+                             <div class="ml-6 w-3/5">
+                                <h4 class="text-xl font-bold mb-2">Residential</h4>
+                                <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                             </div>
+                        </div>
+                     </div>
+                </div>
+                <!-- right column -->
+                <div class="flex-1 w-11/12 md:w-auto md:w-auto mx-auto md:mx-0">
+                    <img src="assets/Rectangle.png" alt="">
+                </div>
+            </div>
+        </section>
+
+
+
+
     </main>
 
     <footer>
