--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         </section>
 
         <!-- metrics section -->
-        <section class="bg-gray-300">
+        <section class="bg-gray-300 pb-20">
             <!-- metrics container -->
             <div class="grid md:grid-cols-2 gap-10 lg:grid-cols-4 mx-auto w-11/12 md:w-4/5 py-12 bg-white rounded-lg">
                 <!-- first metric -->
@@ -240,7 +240,84 @@
             </div>
         </section>
 
+        <!-- our work process section -->
+        <section class="bg-gray-300 pb-20">
+            <div class="mx-auto w-11/12 md:w-4/5">
+                <!-- about us -->
+                <div class="mb-5 text-center md:text-left flex justify-center">
+                    <a class="btn rounded-3xl font-bold bg-white border-none pointer-events-none"><svg
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="size-4">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                        </svg>
+                        About Us</a>
+                </div>
+                <!-- section text -->
+                <div class="md:w-auto mx-auto">
+                    <h3 class="text-center text-3xl md:text-4xl font-extrabold">Our Works Process
+                    </h3>
+                    <p class="text-center mt-5 w-full md:w-3/5 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+                <div class="grid md:grid-cols-2 gap-5 md:gap-10 lg:grid-cols-4 py-12">
+                    <!-- first info -->
+                    <div class="bg-[#E7C1D3] rounded-lg p-8 md:p-6">
+                        <!-- img -->
+                        <div class="mb-2">
+                            <img class="" src="assets/concept.png" alt="">
+                        </div>
+                        <!-- text content -->
+                        <div class="">
+                            <h3 class="text-xl font-extrabold mb-2 text-[#1C1C1C]">Concept</h3>
+                            <p class="text-[#1C1C1C]">The barn house captivates with its blend of rustic charm and
+                                modern.</p>
+                        </div>
+                    </div>
+                    <!-- second info -->
+                    <div class="bg-[#EFDA6E] rounded-lg p-8 md:p-6">
+                        <!-- img -->
+                        <div class="mb-2">
+                            <img class="" src="assets/flow-chart.png" alt="">
+                        </div>
+                        <!-- text content -->
+                        <div class="">
+                            <h3 class="text-xl font-extrabold mb-2 text-[#1C1C1C]">Design Process</h3>
+                            <p class="text-[#1C1C1C]">The barn house captivates with its blend of rustic charm and
+                                modern.</p>
+                        </div>
+                    </div>
+                    <!-- third info -->
+                    <div class="bg-[#A4DAC3] rounded-lg p-8 md:p-6">
+                        <!-- img -->
+                        <div class="mb-2">
+                            <img class="" src="assets/vision.png" alt="">
+                        </div>
+                        <!-- text content -->
+                        <div class="">
+                            <h3 class="text-xl font-extrabold mb-2 text-[#1C1C1C]">Supervision</h3>
+                            <p class="text-[#1C1C1C]">The barn house captivates with its blend of rustic charm and
+                                modern.</p>
+                        </div>
+                    </div>
+                    <!-- fourth info -->
+                    <div class="bg-[#77AAEA] rounded-lg p-8 md:p-6">
+                        <!-- img -->
+                        <div class="mb-2">
+                            <img class="" src="assets/budget-planning.png" alt="">
+                        </div>
+                        <!-- text content -->
+                        <div class="">
+                            <h3 class="text-xl font-extrabold mb-2 text-[#1C1C1C]">Budget Planning</h3>
+                            <p class="text-[#1C1C1C]">The barn house captivates with its blend of rustic charm and
+                                modern.</p>
+                        </div>
+                    </div>
 
+                </div>
+            </div>
+            <!-- info container -->
+
+        </section>
 
     </main>
 
