--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                     d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
                             </svg></a>
-
                     </div>
                 </div>
             </div>
@@ -257,7 +256,8 @@
                 <div class="md:w-auto mx-auto">
                     <h3 class="text-center text-3xl md:text-4xl font-extrabold">Our Works Process
                     </h3>
-                    <p class="text-center mt-5 w-full md:w-3/5 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    <p class="text-center mt-5 w-full md:w-3/5 mx-auto">The barn house captivates with its blend of
+                        rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
                 </div>
                 <div class="grid md:grid-cols-2 gap-5 md:gap-10 lg:grid-cols-4 py-12">
                     <!-- first info -->
@@ -312,12 +312,131 @@
                                 modern.</p>
                         </div>
                     </div>
-
                 </div>
             </div>
-            <!-- info container -->
-
         </section>
+
+        <!-- read out articles and news -->
+        <section class="bg-gray-300 pb-20">
+            <div class="mx-auto w-11/12 md:w-4/5">
+                <!-- about us -->
+                <div class="mb-5 text-center md:text-left flex justify-center">
+                    <a class="btn rounded-3xl font-bold accent-color border-none pointer-events-none shadow-none"><svg
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="size-4">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                        </svg>
+                        Rinterio News</a>
+                </div>
+                <!-- section text -->
+                <div class="md:w-auto mx-auto">
+                    <h3 class="text-center text-3xl md:text-4xl font-extrabold">Read Our Articles and News
+                    </h3>
+                    <p class="text-center mt-5 w-full md:w-3/5 mx-auto">The barn house captivates with its blend of
+                        rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+                <div class="grid md:grid-cols-1 gap-5 md:gap-6 lg:grid-cols-3 py-12">
+                    <!-- first article -->
+                    <div class="bg-white rounded-lg p-6 md:p-6">
+                        <!-- img -->
+                        <div>
+                            <img class="w-full" src="assets/article1.png" alt="">
+                        </div>
+                        <!-- info -->
+                        <div class="flex justify-start gap-5 my-3">
+                            <div class="flex justify-between gap-2 items-center">
+                                <img src="assets/calendar-03.png" alt="">
+                                <p class="optional-color text-sm">July 14, 2024</p>
+                            </div>
+                            <div class="flex justify-between gap-2 items-center">
+                                <img src="assets/user-circle.png" alt="">
+                                <p class="optional-color text-sm">By Admin</p>
+                            </div>
+                        </div>
+                        <!-- text content -->
+                        <div>
+                            <h4 class="text-xl font-extrabold text-gray-700 mb-2">How to choose the furniture right of your home.</h4>
+                            <p>The barn house captivates with its blend of rustic charm and modern. </p>
+                        </div>
+                        <!-- btn -->
+                        <div>
+                            <button class="btn btn-link text-black no-underline text-lg font-bold bg-none border-none p-0">Read More <svg
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="black"
+                                    class="size-7 bg-[#ABEF5F] rounded-full py-1 rotate-45 mr-1">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
+                                </svg></button>
+                        </div>
+                    </div>
+                    <!-- second article -->
+                    <div class="bg-white rounded-lg p-6 md:p-6">
+                        <!-- img -->
+                        <div>
+                            <img class="w-full" src="assets/article2.png" alt="">
+                        </div>
+                        <!-- info -->
+                        <div class="flex justify-start gap-5 my-3">
+                            <div class="flex justify-between gap-2 items-center">
+                                <img src="assets/calendar-03.png" alt="">
+                                <p class="optional-color text-sm">July 14, 2024</p>
+                            </div>
+                            <div class="flex justify-between gap-2 items-center">
+                                <img src="assets/user-circle.png" alt="">
+                                <p class="optional-color text-sm">By Admin</p>
+                            </div>
+                        </div>
+                        <!-- text content -->
+                        <div>
+                            <h4 class="text-xl font-extrabold text-gray-700 mb-2">How to choose the furniture right of your home.</h4>
+                            <p>The barn house captivates with its blend of rustic charm and modern. </p>
+                        </div>
+                        <!-- btn -->
+                        <div>
+                            <button class="btn btn-link text-black no-underline text-lg font-bold bg-none border-none p-0">Read More <svg
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="black"
+                                    class="size-7 bg-[#ABEF5F] rounded-full py-1 rotate-45 mr-1">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
+                                </svg></button>
+                        </div>
+                    </div>
+                    <!-- third article -->
+                    <div class="bg-white rounded-lg p-6 md:p-6">
+                        <!-- img -->
+                        <div>
+                            <img class="w-full" src="assets/article3.png" alt="">
+                        </div>
+                        <!-- info -->
+                        <div class="flex justify-start gap-5 my-3">
+                            <div class="flex justify-between gap-2 items-center">
+                                <img src="assets/calendar-03.png" alt="">
+                                <p class="optional-color text-sm">July 14, 2024</p>
+                            </div>
+                            <div class="flex justify-between gap-2 items-center">
+                                <img src="assets/user-circle.png" alt="">
+                                <p class="optional-color text-sm">By Admin</p>
+                            </div>
+                        </div>
+                        <!-- text content -->
+                        <div>
+                            <h4 class="text-xl font-extrabold text-gray-700 mb-2">How to choose the furniture right of your home.</h4>
+                            <p>The barn house captivates with its blend of rustic charm and modern. </p>
+                        </div>
+                        <!-- btn -->
+                        <div>
+                            <button class="btn btn-link text-black no-underline text-lg font-bold bg-none border-none p-0">Read More <svg
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="black"
+                                    class="size-7 bg-[#ABEF5F] rounded-full py-1 rotate-45 mr-1">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
+                                </svg></button>
+                        </div>
+                    </div>
+
 
     </main>
 
