--- a/index.html
+++ b/index.html
@@ -356,13 +356,15 @@
                         </div>
                         <!-- text content -->
                         <div>
-                            <h4 class="text-xl font-extrabold text-gray-700 mb-2">How to choose the furniture right of your home.</h4>
+                            <h4 class="text-xl font-extrabold text-gray-700 mb-2">How to choose the furniture right of
+                                your home.</h4>
                             <p>The barn house captivates with its blend of rustic charm and modern. </p>
                         </div>
                         <!-- btn -->
                         <div>
-                            <button class="btn btn-link text-black no-underline text-lg font-bold bg-none border-none p-0">Read More <svg
-                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            <button
+                                class="btn btn-link text-black no-underline text-lg font-bold bg-none border-none p-0">Read
+                                More <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                     stroke-width="1.5" stroke="black"
                                     class="size-7 bg-[#ABEF5F] rounded-full py-1 rotate-45 mr-1">
                                     <path stroke-linecap="round" stroke-linejoin="round"
@@ -389,13 +391,15 @@
                         </div>
                         <!-- text content -->
                         <div>
-                            <h4 class="text-xl font-extrabold text-gray-700 mb-2">How to choose the furniture right of your home.</h4>
+                            <h4 class="text-xl font-extrabold text-gray-700 mb-2">How to choose the furniture right of
+                                your home.</h4>
                             <p>The barn house captivates with its blend of rustic charm and modern. </p>
                         </div>
                         <!-- btn -->
                         <div>
-                            <button class="btn btn-link text-black no-underline text-lg font-bold bg-none border-none p-0">Read More <svg
-                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            <button
+                                class="btn btn-link text-black no-underline text-lg font-bold bg-none border-none p-0">Read
+                                More <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                     stroke-width="1.5" stroke="black"
                                     class="size-7 bg-[#ABEF5F] rounded-full py-1 rotate-45 mr-1">
                                     <path stroke-linecap="round" stroke-linejoin="round"
@@ -422,13 +426,15 @@
                         </div>
                         <!-- text content -->
                         <div>
-                            <h4 class="text-xl font-extrabold text-gray-700 mb-2">How to choose the furniture right of your home.</h4>
+                            <h4 class="text-xl font-extrabold text-gray-700 mb-2">How to choose the furniture right of
+                                your home.</h4>
                             <p>The barn house captivates with its blend of rustic charm and modern. </p>
                         </div>
                         <!-- btn -->
                         <div>
-                            <button class="btn btn-link text-black no-underline text-lg font-bold bg-none border-none p-0">Read More <svg
-                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            <button
+                                class="btn btn-link text-black no-underline text-lg font-bold bg-none border-none p-0">Read
+                                More <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                     stroke-width="1.5" stroke="black"
                                     class="size-7 bg-[#ABEF5F] rounded-full py-1 rotate-45 mr-1">
                                     <path stroke-linecap="round" stroke-linejoin="round"
@@ -436,12 +442,105 @@
                                 </svg></button>
                         </div>
                     </div>
+        </section>
 
+        <section class="p-2">
+            <!-- form -->
+            <div class="bg-[url(assets/bg.jpg)] bg-repeat-round py-20">
+                <div class="mx-auto w-11/12 md:w-4/5">
+                    <!-- let's connect -->
+                    <div class="mb-5 text-center md:text-left flex justify-center">
+                        <a class="btn rounded-3xl font-bold accent-color border-none pointer-events-none shadow-none"><svg
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-4">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                            </svg>
+                            Let's Connect</a>
+                    </div>
+                    <!-- section text -->
+                    <div class="md:w-auto mx-auto">
+                        <h3 class="text-center text-3xl md:text-4xl font-extrabold">Let's Discuss next Project
+                        </h3>
+                        <p class="text-center mt-5 w-full md:w-3/5 mx-auto">The barn house captivates with its blend of
+                            rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    </div>
+                    <!-- form -->
+                    <div class="mt-5">
+                        <fieldset class="mx-auto text-center fieldset w-4/5 p-4 space-y-3">
+                            <div class="flex gap-3">
+                                <input type="text" class="input w-5/5 rounded-3xl py-6 px-5"
+                                    placeholder="First Name*" />
+                                <input type="text" class="input w-5/5 rounded-3xl py-6 px-5" placeholder="Last Name*" />
+                            </div>
+                            <div class="flex gap-3">
+                                <input type="number" class="input w-5/5 rounded-3xl py-6 px-5"
+                                    placeholder="Phone Number*" />
+                                <input type="email" class="input w-5/5 rounded-3xl py-6 px-5"
+                                    placeholder="Email Address*" />
+                            </div>
+                            <textarea class="textarea h-40 w-5/5 rounded-3xl py-4"
+                                placeholder="Write Your Message Here"></textarea>
+                            <a class="btn rounded-3xl text-lg font-bold primary-color py-6">Send Mail <svg
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="white"
+                                    class="size-6 bg-[#1C1C1C] rounded-full py-1 rotate-45 mr-1">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
+                                </svg></a>
+                        </fieldset>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
-    <footer>
+    <footer class="global-font bg-[#1C1C1C]">
+        <div class="mx-auto w-11/12 md:w-4/5 pb-20">
+            <!-- footer logo -->
+            <div class="text-center pt-20">
+                <button>
+                    <a class="flex items-center text-white text-3xl font-extrabold"><svg xmlns="http://www.w3.org/2000/svg"
+                        fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black"
+                        class="size-7 primary-color rounded-full py-1 rotate-45 mr-1">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
+                    </svg>
+                    Rinterio</a>
+                </button>
+            </div>
+            <!-- footer text -->
+             <div>
+                <p class="text-center text-gray-400 mt-3 w-full md:w-3/5 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+             </div>
+             <!-- footer links -->
+              <ul class="text-gray-200 md:flex gap-30 justify-center mt-6 md:mt-12 space-y-3 md:space-y-0 text-center">
+                <li class="hover:text-[#ABEF5F] transition"><a a href="#">Home</a></li>
+                <li class="hover:text-[#ABEF5F] transition"><a a href="#">Services</a></li>
+                <li class="hover:text-[#ABEF5F] transition"><a a href="#">Portfolio</a></li>
+                <li class="hover:text-[#ABEF5F] transition"><a a href="#">Blogs</a></li>
+                <li class="hover:text-[#ABEF5F] transition"><a a href="#">Contact Us</a></li>
+              </ul>
+              <div class="text-center mt-6 md:mt-12">
+                <button>
+                    <a class="btn rounded-3xl text-lg font-bold primary-color py-6">Book Consult <svg
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        stroke-width="1.5" stroke="white"
+                        class="size-6 bg-[#1C1C1C] rounded-full py-1 rotate-45 mr-1">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
+                    </svg></a>
+                </button>
+              </div>
 
+
+
+
+
+
+
+        </div>
     </footer>
 </body>
 
